- Had to recover from backup due to Jeykll wiping the root directory and my local version being several commits ahead of Github. Have since updated to latest Jeykll, which protects against the directory wiping issue. - Latest Jekyll has drafts feature so I'm using that until I'm actually holding the VISA in my hands. - Implemented paginated posts (max 5 per page). - Images centered within articles.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Chris' Blag
 ---
 {% assign first = true %}
 {% include JB/setup %}
-{% for post in site.posts %}
+{% for post in paginator.posts %}
 <header id="begin">
 	{% if first == true %}
 		{% assign first = false %}
@@ -18,3 +18,17 @@ title: Chris' Blag
 	{{ post.content }}
 </article>
 {% endfor %}
+
+<nav class="pagination">
+{% if paginator.previous_page %}
+	{% if paginator.previous_page == 1 %}
+	<span class="prev"><a class="nav_button"href="/" rel="previous">←&nbsp;&nbsp;Previous</a></next>
+	{% else %}
+	<span class="prev"><a class="nav_button" href="/page{{ previous_page }}"" rel="previous">←&nbsp;&nbsp;Previous</a></next>
+	{% endif %}
+{% endif %}
+<span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
+{% if paginator.next_page %}
+	<span class="next"><a class="nav_button" href="/page{{ paginator.next_page }}"" rel="next">Next&nbsp;&nbsp;→</a></next>
+{% endif %}
+</div>
