--- a/pages/categories.html
+++ b/pages/categories.html
@@ -4,11 +4,10 @@ title: Categories
 header: Posts By Category
 group: 
 ---
-{% include JB/setup %}
 
 <ul class="tag_box inline">
   {% assign categories_list = site.categories %}
-  {% include JB/categories_list %}
+  {% include categories_list %}
 </ul>
 
 
@@ -16,7 +15,7 @@ group:
   <h2 id="{{ category[0] }}-ref">{{ category[0] | join: "/" }}</h2>
   <ul>
     {% assign pages_list = category[1] %}  
-    {% include JB/pages_list %}
+    {% include pages_list %}
   </ul>
 {% endfor %}
 
