--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Chris' Blag
+description: Various ramblings.
+image: http://www.chrislewis.com.au/assets/images/developer-koala.jpg
 ---
 {% for page in paginator.posts %}
 	{% include post %}
