Implement 'read more' functionality

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ description: Various ramblings.
 image: http://www.chrislewis.com.au/assets/images/developer-koala.jpg
 ---
 {% for page in paginator.posts %}
-	{% include post %}
+	{% include post_preview %}
 {% endfor %}
 
 <nav class="pagination">
