--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@ image: http://www.chrislewis.com.au/assets/images/developer-koala.jpg
 {% endfor %}
 
 <nav class="pagination">
-{% if paginator.previous_page %}{% if paginator.previous_page == 1 %}<span class="prev"><a class="nav_button"href="/" rel="previous">←&nbsp;&nbsp;Previous</a></next>{% else %}<span class="prev"><a class="nav_button" href="/page{{ previous_page }}"" rel="previous">←&nbsp;&nbsp;Previous</a></next>{% endif %}{% endif %}
-{% if paginator.next_page %}<span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span><span class="next"><a class="nav_button" href="/page{{ paginator.next_page }}"" rel="next">Next&nbsp;&nbsp;→</a></next>{% endif %}
+
+{% if paginator.previous_page %}
+	{% if paginator.previous_page == 1 %}
+		<div class="prev">
+			<a class="nav_button"href="/" rel="previous">←&nbsp;&nbsp;Previous</a>
+		</div>
+	{% else %}
+		<div class="prev">
+			<a class="nav_button" href="/page{{ previous_page }}" rel="previous">←&nbsp;&nbsp;Previous</a>
+		</div>
+	{% endif %}
+{% endif %}
+
+{% if paginator.next_page %}
+	<span class="page_number ">
+		Page: {{ paginator.page }} of {{ paginator.total_pages }}
+	</span>
+	<div class="next">
+		<a class="nav_button" href="/page{{ paginator.next_page }}" rel="next">Next&nbsp;&nbsp;→</a>
+	</div>
+{% endif %}
+
 </nav>
