--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Chris' Blag
-description: Various ramblings.
+title: Chris Lewis | Software Engineer
+description: Various ramblings about me and my work.
 image: http://www.chrislewis.com.au/images/developer-koala.jpg
 ---
 {% for page in paginator.posts %}
