--- a/index.html
+++ b/index.html
@@ -4,35 +4,19 @@ title: Chris Lewis | Software Engineer
 description: Various ramblings about me and my work.
 image: http://www.chrislewis.com.au/images/developer-koala.jpg
 ---
-{% for page in paginator.posts %}
-	{% include post_preview %}
-{% endfor %}
 
-{% if paginator.previous_page or paginator.next_page %}
-
-<nav class="pagination">
-
-{% if paginator.previous_page %}
-	{% if paginator.previous_page == 1 %}
-		<div class="prev">
-			<a class="nav_button"href="/" rel="previous">←&nbsp;&nbsp;Previous</a>
+<div id="c">
+	<div id="d">
+		<div>
+			<h1>Chris Lewis</h1>
+			<p>I'm a software engineer on the Core Services team at <a href="https://www.twitter.com">Twitter</a>. My interests include functional programming (Scala / Haskell), distributed systems, and anything Javascript (particularly Node.JS / React Native). I previously worked at <a href="https://www.uber.com">Uber</a> where I helped build and launch <a href="https://www.ubereats.com/">UberEats</a>. I hold degrees in computer science and law.</p>
+			<div id="n">
+				<a href="https://www.twitter.com/chrislewis_aus">{% include images/twitter.svg %} Twitter</a>
+				<a href="https://www.linkedin.com/in/cdlewis/">{% include images/linkedin.svg %} LinkedIn</a>
+			</div>
 		</div>
-	{% else %}
-		<div class="prev">
-			<a class="nav_button" href="/page{{ previous_page }}" rel="previous">←&nbsp;&nbsp;Previous</a>
+		<div>
+			<img src="/images/developer-koala.png" />
 		</div>
-	{% endif %}
-{% endif %}
-
-{% if paginator.next_page %}
-	<span class="page_number ">
-		Page: {{ paginator.page }} of {{ paginator.total_pages }}
-	</span>
-	<div class="next">
-		<a class="nav_button" href="/page{{ paginator.next_page }}" rel="next">Next&nbsp;&nbsp;→</a>
 	</div>
-{% endif %}
-
-</nav>
-
-{% endif %}
+</div>
