Continue to iterate on full-screen design

--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@ description: Various ramblings about me and my work.
 image: http://www.chrislewis.com.au/images/developer-koala.jpg
 ---
 
-<div id="c">
-	<div id="d">
-		<div>
+<div id="outer">
+	<div id="inner">
+		<div id="bio">
 			<h1>Chris Lewis</h1>
 			<p>I'm a software engineer on the Core Services team at <a href="https://www.twitter.com">Twitter</a>. My interests include functional programming (Scala / Haskell), distributed systems, and anything Javascript (particularly Node.JS / React Native). I previously worked at <a href="https://www.uber.com">Uber</a> where I helped build and launch <a href="https://www.ubereats.com/">UberEats</a>. I hold degrees in computer science and law.</p>
-			<div id="n">
+			<div id="links">
 				<a href="https://www.twitter.com/chrislewis_aus">{% include images/twitter.svg %} Twitter</a>
 				<a href="https://www.linkedin.com/in/cdlewis/">{% include images/linkedin.svg %} LinkedIn</a>
 			</div>
 		</div>
-		<div>
+		<div id="avatar">
 			<img src="/images/developer-koala.png" />
 		</div>
 	</div>
