--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ image: http://www.chrislewis.com.au/images/developer-koala.jpg
 			</div>
 		</div>
 		<div id="avatar">
-			<img src="/images/developer-koala.png" />
+			<img src="/images/developer-koala.png" alt="koala with glasses" />
 		</div>
 	</div>
 </div>
