fix mobile responsive layout

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ image: http://www.chrislewis.com.au/images/developer-koala.jpg
 			<div id="links">
 				<a href="https://www.twitter.com/chrislewis_aus">{% include images/twitter.svg %} Blog</a>
 				<a href="https://www.linkedin.com/in/cdlewis/">{% include images/linkedin.svg %} Resumé</a>
-				<a id="email" href="/email">{% include images/mailbox.svg %} Email</a>
+				<a id="email" href="#">{% include images/mailbox.svg %} Email</a>
 			</div>
 		</div>
 		<div id="avatar">
