Ad mastodon verification

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ image: http://www.chrislewis.com.au/images/developer-koala.jpg
 		</div>
 	</div>
 </div>
-
+<a rel="me" style="display: none" href="https://macaw.social/@chris">Mastodon</a>
 <script type="text/javascript" async>
   document.getElementById("email").href = "mailto:" + ['contact', 'chrislewis.au'].join('@');
   </script>
