--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ image: http://www.chrislewis.com.au/images/developer-koala.jpg
 			<h1>Chris Lewis</h1>
 			<p>I'm an experienced software engineer based in New York 🇺🇸. My interests include functional programming (Scala / Haskell), distributed systems, and anything Javascript (particularly Node.JS / React Native). I previously worked at <a href="https://www.twitter.com">Twitter</a> as a tech lead on the Core Services team and <a href="https://www.uber.com">Uber</a>, where I helped build and launch <a href="https://www.ubereats.com/">UberEats</a>. I hold degrees in computer science and law.</p>
 			<div id="links">
-				<a href="https://www.twitter.com/chrislewis_aus">{% include images/twitter.svg %} Blog</a>
+				<a href="https://bsky.app/profile/chrislewis.au">{% include images/twitter.svg %} Blog</a>
 				<a href="https://www.linkedin.com/in/cdlewis/">{% include images/linkedin.svg %} Resumé</a>
 				<a id="email" href="#">{% include images/mailbox.svg %} Email</a>
 			</div>
