--- a/index.html
+++ b/index.html
@@ -5,23 +5,53 @@ description: Various ramblings about me and my work.
 image: http://www.chrislewis.com.au/images/developer-koala.jpg
 ---
 
-<div id="outer">
-	<div id="inner">
-		<div id="bio">
-			<h1>Chris Lewis</h1>
-			<p>I'm an experienced software engineer based in New York 🇺🇸. My interests include functional programming (Scala / Haskell), distributed systems, and anything Javascript (particularly Node.JS / React Native). I previously worked at <a href="https://www.twitter.com">Twitter</a> as a tech lead on the Core Services team and <a href="https://www.uber.com">Uber</a>, where I helped build and launch <a href="https://www.ubereats.com/">UberEats</a>. I hold degrees in computer science and law.</p>
-			<div id="links">
-				<a href="https://bsky.app/profile/chrislewis.au">{% include images/twitter.svg %} Blog</a>
-				<a href="https://www.linkedin.com/in/cdlewis/">{% include images/linkedin.svg %} Resumé</a>
-				<a id="email" href="#">{% include images/mailbox.svg %} Email</a>
-			</div>
-		</div>
-		<div id="avatar">
-			<img src="/images/developer-koala.png" alt="koala with glasses" />
-		</div>
-	</div>
+<div class="container-outer">
+  <div class="container">
+    <div class="content">
+      <p class="heading">Greetings Traveller</p>
+      <p>
+        Welcome to my own humble corner of the great web. Please stay a while
+        and listen.
+      </p>
+      <p>
+        My name is <span class="key-phrase">Chris</span>. I currently live in
+        New York, having long ago fled the harsh sun of my native Australia.
+      </p>
+      <p>
+        I love all things computer-related, including functional programming and
+        decompilation of old video games. I also have a healthy collection of
+        unpainted Warhammer models.
+      </p>
+      <p>
+        Perhaps some day I'll post more stuff here. For now you can find me
+        elsewhere using the links <span class="desktop">above.</span
+        ><span class="mobile">below:</span>
+      </p>
+    </div>
+    <div class="fire-card">
+      <img
+        src="./images/koala-by-fire.webp"
+        alt="Pixelated koala by a fire"
+        fetchpriority="high"
+      />
+      <div class="image-fill">
+        <div class="flame-glow">
+          <div class="embers ember1"></div>
+          <div class="embers ember2"></div>
+          <div class="embers ember3"></div>
+          <div class="embers ember4"></div>
+          <div class="embers ember5"></div>
+          <div class="embers ember6"></div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-<a rel="me" style="display: none" href="https://macaw.social/@chris">Mastodon</a>
-<script type="text/javascript" async>
-  document.getElementById("email").href = "mailto:" + ['contact', 'chrislewis.au'].join('@');
-  </script>
+<div class="navigation">
+  <div class="navigation-inner">
+    <a href="/">Home</a>
+    <a href="http://threads.com/@chrislewislewis">Musings</a>
+    <a href="https://github.com/cdlewis">Projects</a>
+    <a href="https://linkedin.com/in/cdlewis/">Resumé</a>
+  </div>
+</div>
