just chris, it's cleaner

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Chris Lewis | Software Engineer
+title: Chris Lewis
 description: Various ramblings about me and my work.
 image: http://www.chrislewis.com.au/images/developer-koala.jpg
 ---
