Update Musings link to new blog URL

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ image: http://www.chrislewis.com.au/images/developer-koala.jpg
 <div class="navigation">
   <div class="navigation-inner">
     <a href="/">Home</a>
-    <a href="http://threads.com/@chrislewislewis">Musings</a>
+    <a href="https://blog.chrislewis.au">Musings</a>
     <a href="https://github.com/cdlewis">Projects</a>
     <a href="https://linkedin.com/in/cdlewis/">Resumé</a>
   </div>
